--- a/Medipodo/assets/css/style.css
+++ b/Medipodo/assets/css/style.css
@@ -741,6 +741,135 @@ section {
   position: relative;
   margin-left: 13% !important;
 }
+/*--------------------------------------------------------------
+# BUSCADOR
+--------------------------------------------------------------*/
+.buscador{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.search_bar{
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search_bar input{
+  width: 700px;
+  height: 35px;
+  border: 3px solid #1977cc;
+  border-radius: 40px;
+  padding: 0px 10px 0px 50px; 
+  font-size: 16px;
+}
+
+.icon-search{
+  position: relative;
+  bottom: 5px;
+  left: 50px;
+  top: 9px;
+  text-decoration: none;
+}
+.icon-search img{
+  width: 34px ;
+  
+}
+
+.content-table{
+  border-collapse: collapse;
+  margin: auto;
+  font-size: 0.9em;
+  min-width: 400px;
+}
+
+.content-table thead tr{
+  background-color: #1977cc;
+  color: #ffffff;
+  text-align: left;
+  font-weight: bold;
+  border-radius: 20px;
+}
+.content-table th,
+.content-table td{
+  padding: 12px 70px;
+}
+
+.content-table tbody tr{
+  border-bottom: 1px solid #b3d6f5;
+  color: #2c4964;
+  background-color: #e2ecf5; 
+}
+
+.content-table tbody tr:nth-of-type(even){
+  background-color: #1977cc;
+  color: #ffffff;
+}
+.content-table tbody tr a{
+  text-decoration: none;
+}
+.content-table tbody tr a:visited{ /*modifica donde esta el "Eaglecopters" que cuando se hace click al lick se coloca en blanco */
+  color: #ffffff;
+}
+.content-table tbody tr a:hover{ 
+  color: #ffffff;
+  text-decoration: underline;
+}
+
+.content-table tbody tr a:link{ /*el color del link cuando aun no es visitado ("Eaglecopters")*/
+  color: #ffffff;
+}
+
+/*--------------------------------------------------------------
+# POPUP MODAL
+--------------------------------------------------------------*/
+.buscador #modal{
+  border-radius: 20px;
+  top: 100px;
+  max-width: calc((100% - 6rem) * 0.35);
+  max-height: calc((100% - 7rem));
+}
+
+.buscador .modal::backdrop{
+  background-color: rgba(0, 0, 0, 0.55);
+}
+
+.container-modal {
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+#contact {
+  background: #F9F9F9;
+  padding: 25px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+
+#contact h3 {
+  display: block;
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+#contact h4 {
+  margin: 5px 0 15px;
+  display: block;
+  font-size: 13px;
+  font-weight: 400;
+}
+
+fieldset {
+  border: medium none !important;
+  margin: 0 0 10px;
+  min-width: 100%;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
 
 /*--------------------------------------------------------------
 # About
@@ -898,6 +1027,7 @@ section {
   animation: none;
   border-radius: 0;
 }
+
 
 @-webkit-keyframes pulsate-btn {
   0% {
